<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registration">

    <LinearLayout
        android:id="@+id/layuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtuser"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/username"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtusername"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:hint="@string/enterusername"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/laypass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtpassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtpassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:hint="@string/enterpassword"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/laybirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtbirth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/dob"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtbirth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:hint="@string/enterbirth"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/laygender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtgender"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/gender"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtgender"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:hint="@string/entergender"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtemail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/email"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtemail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:hint="@string/enteremail"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/laybtn"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnregister"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/register"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
